samples/_failures_safe/1761296675_b19970_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea0328c9.c: In function ‘main’:
./samples/SAFE/__tmp_ea0328c9.c:149:9: error: expected expression at end of input
  149 |         if (sscanf(input,
      |         ^~
./samples/SAFE/__tmp_ea0328c9.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea0328c9.c:149:9: error: expected declaration or statement at end of input
